smoother transition with the translate3d and scale transforms for more multithreaded gpu centered movement animation

--- a/starfield.html
+++ b/starfield.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css"></link>
 </head>
 <body>
-    <div class='star'></div>
+    <div class='star star-center'></div>
     <script src="starfield.js" type="text/javascript"></script>
 </body>
 </html>
