create the star field and add it to the dom, remove height and width of stars since that seems to cause overflowing issues

--- a/starfield.html
+++ b/starfield.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css"></link>
 </head>
 <body>
-    <div class='star star-center'></div>
+    <div class='star-field'></div>
     <script src="starfield.js" type="text/javascript"></script>
 </body>
 </html>
